[gd_scene load_steps=37 format=3 uid="uid://ddymjjpifpc4d"]

[ext_resource type="ArrayMesh" uid="uid://6anlaptdar52" path="res://Player/weapon/ALL/BrokenSword/broken.res" id="2_uw8pe"]
[ext_resource type="Shader" uid="uid://lm1gw4o3cyyh" path="res://shaders/ursc_1.3.0/addons/ursc/spatial/standard_opaque.gdshader" id="3_hj4ra"]
[ext_resource type="Texture2D" uid="uid://befxb5uqu5t7d" path="res://Player/weapon/ALL/BrokenSword/base2.png" id="4_8ovlp"]
[ext_resource type="Script" uid="uid://bb3ghyy64k2bd" path="res://addons/godot_state_charts/state_chart.gd" id="6_tc1m8"]
[ext_resource type="Script" uid="uid://clt3bkcujiepo" path="res://addons/godot_state_charts/compound_state.gd" id="7_igbsf"]
[ext_resource type="Script" uid="uid://1xhujeketj0r" path="res://addons/godot_state_charts/atomic_state.gd" id="8_vujui"]
[ext_resource type="Script" uid="uid://8kg3tepcr415" path="res://addons/godot_state_charts/transition.gd" id="9_ayjpo"]
[ext_resource type="AudioStream" uid="uid://bjlhqucjq20c" path="res://sfx/sword-sound-260274.mp3" id="10_0ckxg"]
[ext_resource type="Script" uid="uid://dtsqtfrp33jka" path="res://addons/godot_state_charts/expression_guard.gd" id="10_uw8pe"]
[ext_resource type="Script" uid="uid://c3csf7xo741r7" path="res://sword_left.gd" id="11_0ckxg"]
[ext_resource type="Script" uid="uid://dlsydctoxqbwy" path="res://components/damage_component.gd" id="11_hj4ra"]
[ext_resource type="Script" uid="uid://ckldcjrbh7hu2" path="res://sword_world_idle.gd" id="11_uw8pe"]
[ext_resource type="Script" uid="uid://x2oyy53b422h" path="res://sword_held_left.gd" id="12_8ovlp"]
[ext_resource type="Script" uid="uid://4edxvrrmei6h" path="res://sword_right.gd" id="12_uw8pe"]
[ext_resource type="Script" uid="uid://dbijl0u5302qj" path="res://sword_back.gd" id="13_8ovlp"]
[ext_resource type="Script" uid="uid://dq87itd33hbbc" path="res://sword_held_right.gd" id="14_k3it3"]
[ext_resource type="Script" uid="uid://wvdotxijfutl" path="res://sword_forward.gd" id="14_r0jyg"]
[ext_resource type="Script" uid="uid://dk5ryvkfxf66v" path="res://sword_held_back.gd" id="16_573oq"]
[ext_resource type="Script" uid="uid://bc3inuwe0nld0" path="res://sword_held_forward.gd" id="18_5kunp"]

[sub_resource type="GDScript" id="GDScript_0ckxg"]
script/source = "class_name WeaponWorld
extends Node3D


@export var player_lookat_ray: RayCast3D
@onready var animation_player: AnimationPlayer = $AnimationPlayer
@onready var state_chart: StateChart = $StateChart

var hit_particles_add = preload(\"res://hitparticles.tscn\")

func _on_damage_component_body_entered(body: Node3D) -> void:
	if player_lookat_ray.is_colliding() && player_lookat_ray.get_collider() == body:
		print(body.collision_layer)
		var hit_particles = hit_particles_add.instantiate()
		get_tree().current_scene.add_child(hit_particles)
		hit_particles.global_position = player_lookat_ray.get_collision_point()
		hit_particles.emitting = true
		hit_particles.get_child(0).emitting=true
		AudioManager.play_sound(load(\"res://sfx/metal-hit-91-200421.mp3\"),player_lookat_ray.get_collision_point(),-20.0)


func _on_damage_component_area_entered(area: Area3D) -> void:
	if area.collision_layer == 4:
		AudioManager.play_sound(load(\"res://sfx/hit-rock-03-266305.mp3\"),player_lookat_ray.get_collision_point(),-20.0)
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k3it3"]
render_priority = 0
shader = ExtResource("3_hj4ra")
shader_parameter/albedo_color = Color(1, 1, 1, 1)
shader_parameter/albedo_texture = ExtResource("4_8ovlp")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_573oq"]
radius = 0.001
height = 0.0104571

[sub_resource type="Animation" id="Animation_6cmx2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_e4sur"]
resource_name = "hold_back"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, -0.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, -1.5708, 0), Vector3(0.314159, -3.10494, 1.16064)]
}

[sub_resource type="Animation" id="Animation_oq5md"]
resource_name = "hold_forward"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.25, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, -1.5708, 0), Vector3(-1.8483, -1.5708, 0.293215)]
}

[sub_resource type="Animation" id="Animation_3bige"]
resource_name = "hold_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.5, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, -1.5708, 0), Vector3(-1.10479, -2.0944, 0.0418879)]
}

[sub_resource type="Animation" id="Animation_j5syt"]
resource_name = "hold_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.164207, 0.0714557, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, -1.5708, 0), Vector3(-1.5708, -1.31074, -0.328122)]
}

[sub_resource type="Animation" id="Animation_y4rpf"]
resource_name = "swing_back"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.127912, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.104345, 0.214524), Vector3(-0.129783, 0.104345, -0.15719), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.127912, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.314456, -2.84112, 1.5708), Vector3(0.139468, -2.8534, 1.51644), Vector3(-1.5708, -1.5708, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.178907,
"stream": ExtResource("10_0ckxg")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_cngb6"]
resource_name = "swing_forward"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.134889, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.25, 0), Vector3(-0.301, -0.4, -0.039), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.134889, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.8483, -1.43292, 0.293215), Vector3(0.897671, -2.4489, 2.58998), Vector3(-1.5708, -1.5708, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.183729,
"stream": ExtResource("10_0ckxg")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_5d4qa"]
resource_name = "swing_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.130238, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.2, 0.07, 0), Vector3(0.132484, 0.07, -0.00332069), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.130238, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.3823, -2.0944, 0.0418879), Vector3(0.10472, -3.58316, -0.240855), Vector3(-1.5708, -1.5708, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.195008,
"start_offset": 0.180696,
"stream": ExtResource("10_0ckxg")
}],
"times": PackedFloat32Array(0.0333333)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_q24d8"]
resource_name = "swing_right"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.129077, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.164207, 0.0714557, 0), Vector3(-0.284717, 0.0714557, -0.0388806), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.130651, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.5708, -1.31074, -0.328122), Vector3(-3.23584, 0.657989, -0.328122), Vector3(-1.5708, -1.5708, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("swing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.284495,
"start_offset": 0.180411,
"stream": ExtResource("10_0ckxg")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ff8w7"]
_data = {
&"RESET": SubResource("Animation_6cmx2"),
&"hold_back": SubResource("Animation_e4sur"),
&"hold_forward": SubResource("Animation_oq5md"),
&"hold_left": SubResource("Animation_3bige"),
&"hold_right": SubResource("Animation_j5syt"),
&"swing_back": SubResource("Animation_y4rpf"),
&"swing_forward": SubResource("Animation_cngb6"),
&"swing_left": SubResource("Animation_5d4qa"),
&"swing_right": SubResource("Animation_q24d8")
}

[sub_resource type="Resource" id="Resource_5kunp"]
script = ExtResource("10_uw8pe")
expression = "can_attack == true"
metadata/_custom_type_script = "uid://dtsqtfrp33jka"

[sub_resource type="Resource" id="Resource_x6r11"]
script = ExtResource("10_uw8pe")
expression = "can_attack == true"
metadata/_custom_type_script = "uid://dtsqtfrp33jka"

[sub_resource type="Resource" id="Resource_rfk6e"]
script = ExtResource("10_uw8pe")
expression = "can_attack == true"
metadata/_custom_type_script = "uid://dtsqtfrp33jka"

[sub_resource type="Resource" id="Resource_qrc4r"]
script = ExtResource("10_uw8pe")
expression = "can_attack == true"
metadata/_custom_type_script = "uid://dtsqtfrp33jka"

[node name="sword_world_model" type="Node3D"]
script = SubResource("GDScript_0ckxg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.000361999, 100, 0.000361999, 0, -0.000361999, 100, 100, 0.000361999, 1.31043e-09, 0, 0, 0)
layers = 2
mesh = ExtResource("2_uw8pe")
surface_material_override/0 = SubResource("ShaderMaterial_k3it3")

[node name="DamageComponent" type="Area3D" parent="MeshInstance3D"]
transform = Transform3D(0.99999, -0.00352724, -0.00279963, 0.00352722, 0.999994, -9.87513e-06, 0.00279965, 9.54969e-11, 0.999996, 0, 0, -0.001)
collision_mask = 6
monitoring = false
monitorable = false
script = ExtResource("11_hj4ra")
amount = 25.0
damage_type = 1
metadata/_custom_type_script = "uid://dlsydctoxqbwy"

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/DamageComponent"]
transform = Transform3D(0.99998, -0.000755995, -0.00634921, -0.00635508, -0.00803333, -0.999948, 0.00070495, 0.999967, -0.00803797, 7.87552e-06, -1.22693e-10, 0.00281303)
shape = SubResource("CapsuleShape3D_573oq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ff8w7")
}

[node name="swing" type="AudioStreamPlayer3D" parent="."]
volume_db = -12.0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("6_tc1m8")
metadata/_custom_type_script = "uid://bb3ghyy64k2bd"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("7_igbsf")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="to_held_left" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("9_ayjpo")
to = NodePath("../../held_left")
event = &"hold_left"
guard = SubResource("Resource_5kunp")
delay_in_seconds = "0.0"

[node name="to_held_right" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("9_ayjpo")
to = NodePath("../../held_right")
event = &"hold_right"
guard = SubResource("Resource_x6r11")
delay_in_seconds = "0.0"

[node name="to_held_back" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("9_ayjpo")
to = NodePath("../../held_back")
event = &"hold_back"
guard = SubResource("Resource_rfk6e")
delay_in_seconds = "0.0"

[node name="to_held_forwards" type="Node" parent="StateChart/CompoundState/idle"]
script = ExtResource("9_ayjpo")
to = NodePath("../../held_forward")
event = &"hold_forward"
guard = SubResource("Resource_qrc4r")
delay_in_seconds = "0.0"

[node name="idle" type="Node" parent="StateChart/CompoundState/idle" node_paths=PackedStringArray("weapon")]
script = ExtResource("11_uw8pe")
weapon = NodePath("../../../..")

[node name="held_left" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="held_left" type="Node" parent="StateChart/CompoundState/held_left"]
script = ExtResource("12_8ovlp")

[node name="to_left" type="Node" parent="StateChart/CompoundState/held_left"]
script = ExtResource("9_ayjpo")
to = NodePath("../../left")
event = &"attack_left"
delay_in_seconds = "0.0"

[node name="left" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="left" type="Node" parent="StateChart/CompoundState/left"]
script = ExtResource("11_0ckxg")

[node name="to_idle" type="Node" parent="StateChart/CompoundState/left"]
script = ExtResource("9_ayjpo")
to = NodePath("../../idle")
event = &"idle"
delay_in_seconds = ".5"

[node name="held_right" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="held_right" type="Node" parent="StateChart/CompoundState/held_right"]
script = ExtResource("14_k3it3")

[node name="to_right" type="Node" parent="StateChart/CompoundState/held_right"]
script = ExtResource("9_ayjpo")
to = NodePath("../../right")
event = &"attack_right"
delay_in_seconds = "0.0"

[node name="right" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="right" type="Node" parent="StateChart/CompoundState/right"]
script = ExtResource("12_uw8pe")

[node name="to_idle2" type="Node" parent="StateChart/CompoundState/right"]
script = ExtResource("9_ayjpo")
to = NodePath("../../idle")
delay_in_seconds = ".5"

[node name="held_back" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="held_back" type="Node" parent="StateChart/CompoundState/held_back"]
script = ExtResource("16_573oq")

[node name="to_back" type="Node" parent="StateChart/CompoundState/held_back"]
script = ExtResource("9_ayjpo")
to = NodePath("../../back")
event = &"attack_back"
delay_in_seconds = "0.0"

[node name="back" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="back" type="Node" parent="StateChart/CompoundState/back"]
script = ExtResource("13_8ovlp")

[node name="to_idle3" type="Node" parent="StateChart/CompoundState/back"]
script = ExtResource("9_ayjpo")
to = NodePath("../../idle")
delay_in_seconds = ".5"

[node name="held_forward" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="held_forward" type="Node" parent="StateChart/CompoundState/held_forward"]
script = ExtResource("18_5kunp")

[node name="to_forward" type="Node" parent="StateChart/CompoundState/held_forward"]
script = ExtResource("9_ayjpo")
to = NodePath("../../forward")
event = &"attack_forward"
delay_in_seconds = "0.0"

[node name="forward" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("8_vujui")

[node name="forward" type="Node" parent="StateChart/CompoundState/forward"]
script = ExtResource("14_r0jyg")

[node name="to_idle4" type="Node" parent="StateChart/CompoundState/forward"]
script = ExtResource("9_ayjpo")
to = NodePath("../../idle")
delay_in_seconds = ".5"

[connection signal="area_entered" from="MeshInstance3D/DamageComponent" to="." method="_on_damage_component_area_entered"]
[connection signal="body_entered" from="MeshInstance3D/DamageComponent" to="." method="_on_damage_component_body_entered"]
[connection signal="state_entered" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/held_left" to="StateChart/CompoundState/held_left/held_left" method="_on_held_left_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/held_left" to="StateChart/CompoundState/held_left/held_left" method="_on_held_left_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/held_left" to="StateChart/CompoundState/held_left/held_left" method="_on_held_left_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/left" to="StateChart/CompoundState/left/left" method="_on_left_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/left" to="StateChart/CompoundState/left/left" method="_on_left_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/left" to="StateChart/CompoundState/left/left" method="_on_left_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/held_right" to="StateChart/CompoundState/held_right/held_right" method="_on_held_right_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/held_right" to="StateChart/CompoundState/held_right/held_right" method="_on_held_right_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/held_right" to="StateChart/CompoundState/held_right/held_right" method="_on_held_right_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/right" to="StateChart/CompoundState/right/right" method="_on_right_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/right" to="StateChart/CompoundState/right/right" method="_on_right_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/right" to="StateChart/CompoundState/right/right" method="_on_right_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/held_back" to="StateChart/CompoundState/held_back/held_back" method="_on_held_back_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/held_back" to="StateChart/CompoundState/held_back/held_back" method="_on_held_back_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/held_back" to="StateChart/CompoundState/held_back/held_back" method="_on_held_back_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/back" to="StateChart/CompoundState/back/back" method="_on_back_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/back" to="StateChart/CompoundState/back/back" method="_on_back_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/back" to="StateChart/CompoundState/back/back" method="_on_back_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/held_forward" to="StateChart/CompoundState/held_forward/held_forward" method="_on_held_forward_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/held_forward" to="StateChart/CompoundState/held_forward/held_forward" method="_on_held_forward_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/held_forward" to="StateChart/CompoundState/held_forward/held_forward" method="_on_held_forward_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/forward" to="StateChart/CompoundState/forward/forward" method="_on_forward_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/forward" to="StateChart/CompoundState/forward/forward" method="_on_forward_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/forward" to="StateChart/CompoundState/forward/forward" method="_on_forward_state_processing"]
